integ-tests/tests/snapshots/parser__bad_leading_zeros__pos_two_zeros.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ pos_two_zeros:1:5
  │
1 │ a = +00
  │     ^^^ unable to parse number
