integ-tests/tests/snapshots/parser__bad_leading_zeros__with_dec.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ with_dec:1:5
  │
1 │ a = 00.0
  │     ^^ unable to parse number
